[package]
name = "oidn"
version = "1.4.1"
edition = "2018"
authors = ["Will Usher <will@willusher.io>"]
build = "build.rs"
homepage = "https://github.com/Twinklebear/oidn-rs"
documentation = "https://docs.rs/oidn"
repository = "https://github.com/Twinklebear/oidn-rs"
readme = "README.md"
license = "MIT"
description = "A wrapper for the Intel OpenImageDenoise image denoising library."
keywords = ["openimagedenoise", "denoise", "denoising"]
exclude = [
    ".travis.yml",
    "*.png",
    "*.jpg",
    ".gitignore",
    "examples/*",
    "scripts/*"
]

[dependencies]
num_enum = "0.5.1"
