[package]
name = "oidn"
version = "1.5.2"
edition = "2021"
authors = ["Will Usher <will@willusher.io>"]
build = "build.rs"
homepage = "https://github.com/Twinklebear/oidn-rs"
documentation = "https://docs.rs/oidn"
repository = "https://github.com/Twinklebear/oidn-rs"
readme = "README.md"
license = "MIT"
description = "A wrapper for the Intel OpenImageDenoise image denoising library."
keywords = ["openimagedenoise", "denoise", "denoising"]
exclude = [
    ".travis.yml",
    "*.png",
    "*.jpg",
    ".gitignore",
    "examples/*",
    "scripts/*"
]
links = "OpenImageDenoise"

[dependencies]
num_enum = "0.5.7"

[workspace]
resolver = "2"
members = [
    "examples/*",
]
