[package]
name = "oidn"
version = "2.3.2"
edition = "2024"
authors = ["Will Usher <will@willusher.io>"]
build = "build.rs"
homepage = "https://github.com/Twinklebear/oidn-rs"
documentation = "https://docs.rs/oidn"
repository = "https://github.com/Twinklebear/oidn-rs"
readme = "README.md"
license = "MIT"
description = "A wrapper for the Intel OpenImageDenoise image denoising library."
keywords = ["openimagedenoise", "denoise", "denoising"]
exclude = [
    ".travis.yml",
    "*.png",
    "*.jpg",
    ".gitignore",
    "examples/*",
    "scripts/*",
]
links = "OpenImageDenoise"

[dependencies]
num_enum = "0.7.3"

[build-dependencies]
pkg-config = "0.3.31"

[dev-dependencies]
rand = "0.9.0"
image = "0.22.5"
exr = "0.9.0"
docopt = "1.1.1"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
